# llm-astronomy-project

./: .gitignore  README.md  metrics.csv  pyproject.toml  server.py  start-all.py
assets/: openai.env
download/执行ADQL查询/: 20260318_203409.json
download/按名称查询区域/: 20260318_203347.json
download/按坐标查询区域/: 20260318_203347.json
download/获取天体光谱/: 20260318_203347.json
download/获取天体图像/: 20260318_203347.json
frontend/: .env.development  .env.production  README.md  env.d.ts  netlify.toml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: MarkdownViewer.vue
frontend/src/composables/: useSSE.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/styles/: tailwind.css
frontend/src/types/: index.ts
frontend/src/views/: AboutView.vue  ChatView.vue  HomeView.vue  NotFoundView.vue  ToolsView.vue
src/agent/: __init__.py  core.py  state.py  tools.py
src/agent/tool/: __init__.py  analysis_tools.py  astronomy_tools.py  base.py
src/astronomy/: __init__.py  astronomy_knowledge.json  data_manager.py  knowledge_base.py
test/: run_benchmarks.py  test_agent_architecture.py  test_agent_routing.py  test_astronomy_system.py  test_astronomy_tools.py  test_astroquery.py  test_cases.json  test_data_analysis_tools.py  test_ned_api.py  test_openai.py  test_react.py  test_tap_services.py
test/mock_assets/: test_gaia.json  test_image.fits  test_ls.csv
