[project]
name = "llm_project_1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "photutils>=2.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "regions>=0.11",
    "requests>=2.32.5",
    "tencentcloud-sdk-python>=3.1.41",
    "uvicorn>=0.41.0",
]
